--- a/Analytics.ipynb
+++ b/Analytics.ipynb
@@ -82,186 +82,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{u'first_name': u'Egor', u'last_name': u'Kotov', u'sex': 2, u'uid': 52493},\n",
-       " {u'faculty': 0,\n",
-       "  u'faculty_name': u'',\n",
-       "  u'first_name': u'Mega',\n",
-       "  u'graduation': 0,\n",
-       "  u'last_name': u'Bydlovich',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 378807,\n",
-       "  u'university': 0,\n",
-       "  u'university_name': u''},\n",
-       " {u'first_name': u'Narina',\n",
-       "  u'last_name': u'Stepanyants',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 545614},\n",
-       " {u'faculty': 84503,\n",
-       "  u'faculty_name': u'\\u0418\\u043d\\u0444\\u043e\\u0440\\u043c\\u0430\\u0446\\u0438\\u043e\\u043d\\u043d\\u043e-\\u0433\\u0443\\u043c\\u0430\\u043d\\u0438\\u0442\\u0430\\u0440\\u043d\\u044b\\u0439',\n",
-       "  u'first_name': u'Stanislav',\n",
-       "  u'graduation': 2015,\n",
-       "  u'last_name': u'Kozlov',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 661576,\n",
-       "  u'university': 26,\n",
-       "  u'university_name': u'\\u041a\\u0413\\u0423 (\\u0431\\u044b\\u0432\\u0448. \\u041a\\u0413\\u0418) \\u0438\\u043c. \\u041a\\u0438\\u0440\\u0438\\u043b\\u043b\\u0430 \\u0438 \\u041c\\u0435\\u0444\\u043e\\u0434\\u0438\\u044f'},\n",
-       " {u'faculty': 771670,\n",
-       "  u'faculty_name': u'',\n",
-       "  u'first_name': u'Tyomny',\n",
-       "  u'graduation': 1965,\n",
-       "  u'last_name': u'Inkvizitor',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 1391016,\n",
-       "  u'university': 0,\n",
-       "  u'university_name': u''},\n",
-       " {u'faculty': 101,\n",
-       "  u'faculty_name': u'\\u0413\\u0435\\u043e\\u0433\\u0440\\u0430\\u0444\\u0438\\u0438\\r\\n',\n",
-       "  u'first_name': u'Maxim',\n",
-       "  u'graduation': 1997,\n",
-       "  u'last_name': u'Udovichenko',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 1999611,\n",
-       "  u'university': 34,\n",
-       "  u'university_name': u'\\u0420\\u0413\\u041f\\u0423 \\u0438\\u043c. \\u0413\\u0435\\u0440\\u0446\\u0435\\u043d\\u0430'},\n",
-       " {u'faculty': 324,\n",
-       "  u'faculty_name': u'\\u041a\\u043e\\u043c\\u043f\\u044c\\u044e\\u0442\\u0435\\u0440\\u043d\\u044b\\u0445 \\u0442\\u0435\\u0445\\u043d\\u043e\\u043b\\u043e\\u0433\\u0438\\u0439 \\u0438 \\u0438\\u043d\\u0444\\u043e\\u0440\\u043c\\u0430\\u0442\\u0438\\u043a\\u0438 (\\u0424\\u041a\\u0422\\u0418, \\u0424\\u0410\\u0412\\u0422)',\n",
-       "  u'first_name': u'Dmitry',\n",
-       "  u'graduation': 0,\n",
-       "  u'last_name': u'Zastavsky',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 2146240,\n",
-       "  u'university': 68,\n",
-       "  u'university_name': u'\\u0421\\u041f\\u0431\\u0413\\u042d\\u0422\\u0423 (\\u041b\\u042d\\u0422\\u0418)'},\n",
-       " {u'faculty': 5,\n",
-       "  u'faculty_name': u'\\u0416\\u0443\\u0440\\u043d\\u0430\\u043b\\u0438\\u0441\\u0442\\u0438\\u043a\\u0438 (\\u0412\\u044b\\u0441\\u0448\\u0430\\u044f \\u0448\\u043a\\u043e\\u043b\\u0430 \\u0436\\u0443\\u0440\\u043d\\u0430\\u043b\\u0438\\u0441\\u0442\\u0438\\u043a\\u0438 \\u0438 \\u043c\\u0430\\u0441\\u0441\\u043e\\u0432\\u044b\\u0445 \\u043a\\u043e\\u043c\\u043c\\u0443\\u043d\\u0438\\u043a\\u0430\\u0446\\u0438\\u0439)',\n",
-       "  u'first_name': u'Nikita',\n",
-       "  u'graduation': 2012,\n",
-       "  u'last_name': u'Afonichkin',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 6038775,\n",
-       "  u'university': 1,\n",
-       "  u'university_name': u'\\u0421\\u041f\\u0431\\u0413\\u0423'},\n",
-       " {u'first_name': u'Roman',\n",
-       "  u'last_name': u'Peregudov',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 7212235},\n",
-       " {u'first_name': u'Rita',\n",
-       "  u'last_name': u'Lesnaya',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 8885745},\n",
-       " {u'first_name': u'Alina',\n",
-       "  u'last_name': u'Lysyuk',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 14165447},\n",
-       " {u'first_name': u'Maria',\n",
-       "  u'last_name': u'Reznichenko',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 22203244},\n",
-       " {u'first_name': u'Nikolay',\n",
-       "  u'last_name': u'Bychenya',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 22733753},\n",
-       " {u'first_name': u'Dima',\n",
-       "  u'last_name': u'Frolov',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 34675538},\n",
-       " {u'first_name': u'Maxim',\n",
-       "  u'last_name': u'Kovalevsky',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 36191198},\n",
-       " {u'first_name': u'Anatoly',\n",
-       "  u'last_name': u'Svyatogorsky',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 69513065},\n",
-       " {u'first_name': u'Margarita',\n",
-       "  u'last_name': u'Grudina',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 72260436},\n",
-       " {u'first_name': u'Svetlana',\n",
-       "  u'last_name': u'Mezhenskaya',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 85447656},\n",
-       " {u'first_name': u'Alexander',\n",
-       "  u'last_name': u'Deminsky',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 93742211},\n",
-       " {u'first_name': u'Elena',\n",
-       "  u'last_name': u'Gritskevich',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 150258054},\n",
-       " {u'first_name': u'Valentina',\n",
-       "  u'last_name': u'Udaltsova',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 151451608},\n",
-       " {u'deactivated': u'deleted',\n",
-       "  u'first_name': u'Denis',\n",
-       "  u'last_name': u'Pankov',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 229078041},\n",
-       " {u'faculty': 3230,\n",
-       "  u'faculty_name': u'\\u042e\\u0440\\u0438\\u0434\\u0438\\u0447\\u0435\\u0441\\u043a\\u0438\\u0439',\n",
-       "  u'first_name': u'Turan',\n",
-       "  u'graduation': 2018,\n",
-       "  u'last_name': u'Guseynov',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 236213391,\n",
-       "  u'university': 381,\n",
-       "  u'university_name': u'\\u0410\\u043b\\u0442\\u0413\\u0423'},\n",
-       " {u'faculty': 37600,\n",
-       "  u'faculty_name': u'\\u041c\\u0435\\u043d\\u0435\\u0434\\u0436\\u043c\\u0435\\u043d\\u0442\\u0430 \\u0438 \\u043c\\u0430\\u0440\\u043a\\u0435\\u0442\\u0438\\u043d\\u0433\\u0430',\n",
-       "  u'first_name': u'Ekaterina',\n",
-       "  u'graduation': 2013,\n",
-       "  u'last_name': u'Yusupova',\n",
-       "  u'sex': 1,\n",
-       "  u'uid': 260029029,\n",
-       "  u'university': 9675,\n",
-       "  u'university_name': u'\\u042e\\u0423\\u041f\\u0418'},\n",
-       " {u'first_name': u'Laki',\n",
-       "  u'last_name': u'Luchano',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 260593232},\n",
-       " {u'faculty': 0,\n",
-       "  u'faculty_name': u'',\n",
-       "  u'first_name': u'Gibdd-Petrogradskogo-Rayona',\n",
-       "  u'graduation': 0,\n",
-       "  u'last_name': u'G-Sankt-Peterburg',\n",
-       "  u'sex': 2,\n",
-       "  u'uid': 338659768,\n",
-       "  u'university': 0,\n",
-       "  u'university_name': u''}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "extracted 26 users from 109490789\n",
+      "extracted 200 users from 2100831\n",
+      "extracted 51 users from 11912933\n",
+      "extracted 104 users from 1167943\n",
+      "extracted 41 users from 15335079\n",
+      "extracted 31 users from 12813079\n",
+      "extracted 17 users from 68478644\n",
+      "extracted 13 users from 16vzvoduvo\n",
+      "extracted 97 users from 59565067\n",
+      "extracted 30 users from 61511779\n",
+      "extracted 200 users from 1182973\n",
+      "extracted 200 users from 1119648\n",
+      "extracted 91 users from 21754234\n",
+      "extracted 8 users from 14294712\n",
+      "extracted 35 users from 7591998\n",
+      "extracted 34 users from 8702762\n",
+      "extracted 2 users from 23386497\n",
+      "extracted 86 users from 1566321\n",
+      "extracted 44 users from 55523638\n",
+      "sum: 1310\n"
+     ]
     }
    ],
    "source": [
-    "from urllib import urlencode  \n",
+    "from urllib import urlencode\n",
+    "import time\n",
     "\n",
-    "params = {\"group_id\": \"109490789\", \n",
-    "          \"count\": 1000, \n",
-    "          \"fields\": \"sex,education\",\n",
-    "          \"access_token\": accessToken}\n",
-    "params = urlencode(params)\n",
+    "groups = [\"109490789\", \n",
+    "          \"2100831\", \n",
+    "          \"11912933\", \n",
+    "          \"1167943\", \n",
+    "          \"15335079\", \n",
+    "          \"12813079\", \n",
+    "          \"68478644\",\n",
+    "          \"16vzvoduvo\",\n",
+    "          \"59565067\",\n",
+    "          \"61511779\",\n",
+    "          \"1182973\",\n",
+    "          \"1119648\",\n",
+    "          \"21754234\",\n",
+    "          \"14294712\",\n",
+    "          \"7591998\",\n",
+    "          \"8702762\",\n",
+    "          \"23386497\",\n",
+    "          \"1566321\",\n",
+    "          \"55523638\"]\n",
     "\n",
-    "url = \"https://api.vk.com/method/groups.getMembers?\" + params\n",
-    "data = json.load(urllib2.urlopen(url))\n",
+    "users = []\n",
     "\n",
-    "data['response']['users']"
+    "for group in groups:\n",
+    "    params = {\"group_id\": group, \n",
+    "              \"count\": 200, \n",
+    "              \"fields\": \"sex,education\",\n",
+    "              \"access_token\": accessToken}\n",
+    "    params = urlencode(params)\n",
+    "\n",
+    "    url = \"https://api.vk.com/method/groups.getMembers?\" + params\n",
+    "    data = json.load(urllib2.urlopen(url))\n",
+    "    data_users = data['response']['users']\n",
+    "    \n",
+    "    print(\"extracted %d users from %s\" % (len(data_users), group))\n",
+    "    users.extend(data_users)\n",
+    "    time.sleep(1)\n",
+    "    \n",
+    "print(\"sum: %d\" % len(users))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -270,17 +169,68 @@
      "data": {
       "text/plain": [
        "university_name\n",
-       "                                         3\n",
-       "АлтГУ                                    1\n",
-       "КГУ (бывш. КГИ) им. Кирилла и Мефодия    1\n",
-       "РГПУ им. Герцена                         1\n",
-       "СПбГУ                                    1\n",
-       "СПбГЭТУ (ЛЭТИ)                           1\n",
-       "ЮУПИ                                     1\n",
+       "                                                             95\n",
+       "Boston University                                             1\n",
+       "АГАУ (бывш. АСХИ)                                             1\n",
+       "АРБ им. Вагановой                                             1\n",
+       "АЧИИ ДонГАУ (бывш. АЧГАА)                                     1\n",
+       "АЭБ МВД РФ (бывш. АНП ФСНП РФ)                                1\n",
+       "АлтГУ                                                         1\n",
+       "БАТиП (БМИТ)                                                  1\n",
+       "БГТУ «Военмех»                                                1\n",
+       "БГУ им. Петровского                                           1\n",
+       "Банковская школа ЦБ РФ                                        1\n",
+       "ВИ МВД РФ\\r\\n                                                 1\n",
+       "ВМИИ (бывш. ЛВВМИУ им. Ленина и ВВМИОЛУ им. Дзержинского)     1\n",
+       "ВятГГУ (бывш. ВГПУ)                                           1\n",
+       "ГУМРФ (бывш. СПбГУВК) им. адм. С.О. Макарова                  1\n",
+       "ИВЭСЭП                                                        1\n",
+       "ИПМаш РАН                                                     1\n",
+       "ИПП                                                           1\n",
+       "КГУ (бывш. КГИ) им. Кирилла и Мефодия                         1\n",
+       "КГУ им. Кирилла и Мефодия                                     1\n",
+       "КГУ им. Циолковского (бывш. КГПУ)                             1\n",
+       "КФ СПбУ МВД РФ (бывш. КЮИ МВД РФ)                             1\n",
+       "ЛГУ им. Пушкина                                               3\n",
+       "МГУ                                                           1\n",
+       "МИЭП                                                          1\n",
+       "МИЭП при МПА ЕврАзЭС                                          1\n",
+       "МЭСИ                                                          1\n",
+       "НГУ им. Лесгафта (бывш. СПбГУФК)                              4\n",
+       "НОИР (ИУОРР)                                                  1\n",
+       "ПГУПС Императора Александра I                                 1\n",
+       "ПетрГУ                                                        1\n",
+       "ПсковГУ (бывш. ПГПУ им. Кирова и ППИ)                         4\n",
+       "РГИСИ (бывш. СПбГАТИ)                                         1\n",
+       "РГПУ им. Герцена                                              4\n",
+       "СГМУ (бывш. АГМА, АГМИ)                                       1\n",
+       "СЗ филиал РГУП (бывш. СЗ филиал РАП)                          1\n",
+       "СЗГМУ им. Мечникова (бывш. СПбГМА, СПбМАПО)                   1\n",
+       "СЗТУ (бывш. СЗПИ)                                             1\n",
+       "СИ РАО                                                        1\n",
+       "СПбГАВМ (бывш. ЛВИ)                                           3\n",
+       "СПбГАУ                                                        1\n",
+       "СПбГИК (бывш. СПбГУКИ)                                        1\n",
+       "СПбГИКиТ (бывш. СПбГУКиТ)                                     2\n",
+       "СПбГЛТУ им. Кирова                                            1\n",
+       "СПбГМТУ (бывш. ЛКИ)                                           1\n",
+       "СПбГУ                                                         5\n",
+       "СПбГУАП                                                       4\n",
+       "СПбГУГА                                                       1\n",
+       "СПбГУТ им. Бонч-Бруевича                                      1\n",
+       "СПбГЭТУ (ЛЭТИ)                                                2\n",
+       "СПбГЭУ (ранее ФИНЭК, ИНЖЭКОН, СПбГУСЭ)                        5\n",
+       "СПбИ (ф) ВГУЮ (бывш. СЗФ РПА Минюста России)                  6\n",
+       "СПбИЭУ                                                        1\n",
+       "СПбПУ Петра Великого (Политех)                                1\n",
+       "СПбУ МВД России                                              14\n",
+       "СПбЮА                                                         1\n",
+       "Университет ИТМО                                              1\n",
+       "ЮУПИ                                                          1\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +250,7 @@
     "for user in data['response']['users']: \n",
     "    res[user.get('university_name', \"\")].append(user)\n",
     "    \n",
-    "df = pd.DataFrame(data['response']['users'])\n",
+    "df = pd.DataFrame(users)\n",
     "df = df.groupby('university_name').size()\n",
     "df"
    ]
