--- a/Analytics.ipynb
+++ b/Analytics.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -168,71 +168,22 @@
     {
      "data": {
       "text/plain": [
-       "university_name\n",
-       "                                                             95\n",
-       "Boston University                                             1\n",
-       "АГАУ (бывш. АСХИ)                                             1\n",
-       "АРБ им. Вагановой                                             1\n",
-       "АЧИИ ДонГАУ (бывш. АЧГАА)                                     1\n",
-       "АЭБ МВД РФ (бывш. АНП ФСНП РФ)                                1\n",
-       "АлтГУ                                                         1\n",
-       "БАТиП (БМИТ)                                                  1\n",
-       "БГТУ «Военмех»                                                1\n",
-       "БГУ им. Петровского                                           1\n",
-       "Банковская школа ЦБ РФ                                        1\n",
-       "ВИ МВД РФ\\r\\n                                                 1\n",
-       "ВМИИ (бывш. ЛВВМИУ им. Ленина и ВВМИОЛУ им. Дзержинского)     1\n",
-       "ВятГГУ (бывш. ВГПУ)                                           1\n",
-       "ГУМРФ (бывш. СПбГУВК) им. адм. С.О. Макарова                  1\n",
-       "ИВЭСЭП                                                        1\n",
-       "ИПМаш РАН                                                     1\n",
-       "ИПП                                                           1\n",
-       "КГУ (бывш. КГИ) им. Кирилла и Мефодия                         1\n",
-       "КГУ им. Кирилла и Мефодия                                     1\n",
-       "КГУ им. Циолковского (бывш. КГПУ)                             1\n",
-       "КФ СПбУ МВД РФ (бывш. КЮИ МВД РФ)                             1\n",
-       "ЛГУ им. Пушкина                                               3\n",
-       "МГУ                                                           1\n",
-       "МИЭП                                                          1\n",
-       "МИЭП при МПА ЕврАзЭС                                          1\n",
-       "МЭСИ                                                          1\n",
-       "НГУ им. Лесгафта (бывш. СПбГУФК)                              4\n",
-       "НОИР (ИУОРР)                                                  1\n",
-       "ПГУПС Императора Александра I                                 1\n",
-       "ПетрГУ                                                        1\n",
-       "ПсковГУ (бывш. ПГПУ им. Кирова и ППИ)                         4\n",
-       "РГИСИ (бывш. СПбГАТИ)                                         1\n",
-       "РГПУ им. Герцена                                              4\n",
-       "СГМУ (бывш. АГМА, АГМИ)                                       1\n",
-       "СЗ филиал РГУП (бывш. СЗ филиал РАП)                          1\n",
-       "СЗГМУ им. Мечникова (бывш. СПбГМА, СПбМАПО)                   1\n",
-       "СЗТУ (бывш. СЗПИ)                                             1\n",
-       "СИ РАО                                                        1\n",
-       "СПбГАВМ (бывш. ЛВИ)                                           3\n",
-       "СПбГАУ                                                        1\n",
-       "СПбГИК (бывш. СПбГУКИ)                                        1\n",
-       "СПбГИКиТ (бывш. СПбГУКиТ)                                     2\n",
-       "СПбГЛТУ им. Кирова                                            1\n",
-       "СПбГМТУ (бывш. ЛКИ)                                           1\n",
-       "СПбГУ                                                         5\n",
-       "СПбГУАП                                                       4\n",
-       "СПбГУГА                                                       1\n",
-       "СПбГУТ им. Бонч-Бруевича                                      1\n",
-       "СПбГЭТУ (ЛЭТИ)                                                2\n",
-       "СПбГЭУ (ранее ФИНЭК, ИНЖЭКОН, СПбГУСЭ)                        5\n",
-       "СПбИ (ф) ВГУЮ (бывш. СЗФ РПА Минюста России)                  6\n",
-       "СПбИЭУ                                                        1\n",
-       "СПбПУ Петра Великого (Политех)                                1\n",
-       "СПбУ МВД России                                              14\n",
-       "СПбЮА                                                         1\n",
-       "Университет ИТМО                                              1\n",
-       "ЮУПИ                                                          1\n",
-       "dtype: int64"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x108e1d450>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXwAAAEPCAYAAABBUX+lAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHwBJREFUeJzt3XuU1XW9//HnCxTvFyxBf2CIWib561Samp50p4KgKXSW\nF055IbRcmafU3+kInjqMtdLQ9KQd9RxLi9Q0vBSEchU2lEfFTJIClSwQUcYLXkJNubx/f3y+ONPE\nMHtm9p7vvrwea81ae77z3Xve7rV9zZfP9/P5vBURmJlZ/euVdwFmZtYzHPhmZg3CgW9m1iAc+GZm\nDcKBb2bWIBz4ZmYNoqTAlzRe0h8kPS7pNkl9JPWVNEvSk5JmStqlzfnLJC2VNKxy5ZuZWanU0Tx8\nSYOAecAHI+IdST8D7gOGAC9HxBWSLgb6RsQ4SUOA24CPAwOBOcD7wxP+zcxyVcoV/uvAO8AOkrYC\ntgNWASOBSdk5k4BR2eOTgDsiYn1ELAeWAYeUs2gzM+u8DgM/Il4BrgKeIQX9axExB+gfEc3ZOauB\nftlTBgArW73EquyYmZnlqMPAl7QPcCEwCPg/pCv9zwFth2g8ZGNmVsW2KuGcg4EHImINgKSfA4cD\nzZL6R0SzpD2AF7LzVwF7tXr+wOzY35DkPxBmZl0QEerK80oZw38SOEzStpIEHAMsAaYCY7JzzgKm\nZI+nAqOzmTyDgf2Ahe0U7a8yfU2YMCH3Gurpy++n38tq/eqODq/wI+J3kn4CPApsAB4DbgR2AiZL\nGgusAE7Nzl8iaTLpj8I64LzobpVmZtZtpQzpEBFXAle2ObwGOLad8y8HLu9eaWZmVk5eaVsnCoVC\n3iXUFb+f5eP3snp0uPCqYr9Y8kiPmVknSSIqeNPWzMzqgAPfzKxBOPDNzBqEA9/MrEE48M3MGoQD\n38ysQTjwzcwahAPfzKxBOPDNzBqEA9/MrEGUtHmamZnlIwKWLoUZM9JXd/gK38ysyrz2GtxzD3zx\nizBoEBx/PDz1FJx3Xvde15unmZnlbONGWLSo5Sr+scfgiCNg+PD0tf/+oGy7tO5snubANzPLwUsv\nwezZKeBnzoRdd20J+COPhO233/zzHPhmZlVuwwZYuLDlKv6JJ6BQaAn5wYNLex0HvplZFXr++ZaA\nnzMHBg5sCfgjjoA+fTr/mg58M7Mq8M478L//2xLyzzwDxx6bAv6442DAgO7/jooGvqQPAD8DAhCw\nD/AN4Jbs+CBgOXBqRLyWPWc8MBZYD3w1ImZt5nUd+GZW85Yvbwn4efPSDdZNV/GHHAJblXnye49d\n4UvqBTwLHAqcD7wcEVdIuhjoGxHjJA0BbgM+DgwE5gDvb5vuDnwzq0VvvQULFrSE/Jo16ep9+HAY\nOhR2372yv787gd/Zvz3HAk9HxEpJI4GjsuOTgCIwDjgJuCMi1gPLJS0DDgEe7kqBZmZ5ikhz4DcF\n/K9/DR/5SAr4W2+Fj34UetXIiqbOBv5pwE+zx/0johkgIlZL6pcdHwA82Oo5q7JjZmY14S9/gblz\nW0J+3ToYMQLOOQduvz1NoaxFJQe+pK1JV+8XZ4fajsd4fMbMalIELF7cEvCPPAKHHpqu4qdNgyFD\nWhY+1bLOXOGPAB6NiJey75sl9Y+IZkl7AC9kx1cBe7V63sDs2N9pamp693GhUKBQKHSiHDOzrluz\nJk2V3BTy222XruIvuijNj99xx7wrTIrFIsVisSyvVfJNW0m3AzMiYlL2/URgTURMbOem7aGkoZzZ\n+KatmeVs40Z49NEU7tOnw+9/n1a0bppRs99+eVdYmorP0pG0PbAC2Cci/pId2w2YTLqaX0Galvlq\n9rPxwNnAOjwt08xy0twMs2alkJ81C/r1awn4T34Stt027wo7zwuvzMyA9evhwQdbhmmefhqOOaZl\n4dP73pd3hd3nwDezhrVyZdp8bMYMuP/+tCfN8OFpPP6ww2DrrfOusLwc+GbWMN5+G371q5ar+NWr\nYdiwFPLDhsEee+RdYWU58M2srj39dLrROmNGWuV64IEtY/EHHQS9e+ddYc9x4JtZXXnjDSgWW67i\n165tCfihQ2G33fKuMD8OfDOraRGwZElLwD/0EBx8cEvIf/jD9bHwqRwc+GZWc157Ld1k3RTyvXq1\n3Gz91Kdg553zrrA6OfDNrOp1pm+rtc+Bb2ZV6aWXWhY+zZwJffuW1rfV2ufAN7OqUK6+rdY+B76Z\n5ea551oWPpWrb6u1z4FvZj1mc31bhw5tWfhUjr6t1j4HvplVVE/3bbX2OfDNrKzeegvmz28J+Vde\n6dm+rdY+B76ZdcuW+rYOH15bfVvrnQPfzDqtbd/W9etbAv6YY2q3b2u9607ge+TNrEG07ts6fTr8\n5jdp++B669tq7fMVvlkda69v6/Dh1dW31UrnIR0zA1r6tm7aSrhW+7Za+xz4Zg2sHvu2Wvt6oon5\nLsAPgQOBjcBY4CngZ8AgYDmpiflr2fnjs3PW4ybmZmW1bl3aPrie+7Za+3oi8H8MzI+IH0naCtgB\nuAR4OSKukHQx0DcixkkaAtwGfBwYCMwB3t823R34ZqXb1Ld1+vQ0s2affVqu4uuxb6u1r6KBL2ln\n4LGI2LfN8SeAoyKiWdIeQDEiPihpHBARMTE7bzrQFBEPt3m+A9+sHY3et9XaV+lpmYOBlyT9CPgH\n4DfABUD/iGgGiIjVkvpl5w8AHmz1/FXZMTPbgvb6tt58c+P1bbXKKCXwtwI+Bnw5In4j6T+BcUDb\ny/NOX643NTW9+7hQKFAoFDr7EmY1q72+rWecAT/5SWP3bbUWxWKRYrFYltcqZUinP/BgROyTff+P\npMDfFyi0GtKZFxEHbGZIZwYwwUM61ujct9XKoSdu2s4HvhART0maAGzqU7MmIia2c9P2UNJQzmx8\n09Ya1Guv/e3Cp969WxY+uW+rdUVPBP4/kKZlbg38Cfg80BuYDOwFrCBNy3w1O388cDawDk/LtAbi\nvq1WaV54ZZYj9221nuTAN+tB7ttqeXLgm1WY+7ZatXDgm5XZpr6tm+bFr1zpvq1WHRz4ZmXy17/C\n+efDnXe6b6tVJzdAMSuDtWth1Ki04OmPf3TfVqs/7lJpBrz6astOk7ff7rC3+uTAt4b34otw9NFp\nv5of/tB71lj9cuBbQ1u1Co46Kq1+veYa6OX/I6yO+eNtDevPf04Lo848E779ba+AtfrnwLeG9MQT\nKewvugjGjcu7GrOe4Vk61nAWLUpDON/5Dpx1Vt7VmPUcB741lAcfTFMvr7sOTj4572rMepYD3xrG\n3LkwejRMmpSu8M0ajcfwrSFMm5bC/s47HfbWuBz4Vvd+9jM4++wU+kcdlXc1Zvlx4Ftdu+mmNBNn\nzpy0H45ZI/MYvtWta66Bq6+GefPgAx/Iuxqz/Dnwre5EpIVUkybBggUwaFDeFZlVBwe+1ZWItJDq\nvvtS2O+5Z94VmVWPksbwJS2X9DtJj0lamB3rK2mWpCclzZS0S6vzx0taJmmppGGVKt6stY0b4ctf\nTtMvi0WHvVlbpd603QgUIuKjEbHp1tc4YE5E7A/MBcYDSBoCnAocAIwArpe8S4lV1vr1MGYM/P73\ncP/98J735F2RWfUpNfC1mXNHApOyx5OAUdnjk4A7ImJ9RCwHlgGeH2EV8/bbcNpp8MILqR3hzjvn\nXZFZdSo18AOYLekRSedkx/pHRDNARKwG+mXHBwArWz13VXbMrOzefBNGjkxj91OmwPbb512RWfUq\n9abtERHxvKTdgVmSniT9EWit0w1qm5qa3n1cKBQoFAqdfQlrYK+/Dp/+NOy9N9x8s3vOWn0qFosU\ni8WyvFanm5hLmgCsBc4hjes3S9oDmBcRB0gaB0RETMzOnwFMiIiH27yOm5hbl738cmoufvDBaSM0\nNy6xRtGdJuYd/m8iaXtJO2aPdwCGAYuBqcCY7LSzgCnZ46nAaEl9JA0G9gMWdqU4s815/vm0RcKn\nPgXXX++wNytVKf8I7g/8XFJk598WEbMk/QaYLGkssII0M4eIWCJpMrAEWAec50t5K5cVK+DYY9M+\n9v/+7+5SZdYZnR7SKdsv9pCOddJTT8HQoXDhhXDBBXlXY5aP7gzp+DaX1YTFi+G44+Bb30o7X5pZ\n5znwreotXAgnnZQ2QzvttLyrMatdDnyravPnwymnpG2OTzwx72rMapsD36rWjBlw5plw++1wzDF5\nV2NW+zyhzarS3XenmThTpjjszcrFgW9VZ9IkOP98mDkTPvGJvKsxqx8e0rGqcv31cPnlqUvVBz+Y\ndzVm9cWBb1Vj4kS48cbUuGTw4LyrMas/DnzLXQR8/evw85+nsB/gvVXNKsKBb7nauDGtnP3Vr9IU\nzN13z7sis/rlwLfcbNgAX/gCPPlkaku46655V2RW3xz4lot33oHTT4c1a2DWLNhhh7wrMqt/Dnzr\ncW+9lVbP9u4N06bBttvmXZFZY/A8fOtRf/kLnHBC6jt7110Oe7Oe5MC3HvPKK2l74333hVtuga23\nzrsis8biwLce0dwMhQIcfniaa9+7d94VmTUeB75V3MqVcOSRMGoUXHWVu1SZ5cWBbxX19NMp7L/w\nBbj0Uoe9WZ4c+FYxf/hDajY+bhz867/mXY2ZlRz4knpJ+q2kqdn3fSXNkvSkpJmSdml17nhJyyQt\nlTSsEoVbdXv00bSt8Xe+A+eem3c1Zgadu8L/KrCk1ffjgDkRsT8wFxgPIGkIcCpwADACuF7yP+Qb\nyQMPwIgRcMMNaXGVmVWHkgJf0kDgeOCHrQ6PBCZljycBo7LHJwF3RMT6iFgOLAMOKUu1VvVmz043\nZ2+9FT7zmbyrMbPWSr3C/0/ga0C0OtY/IpoBImI10C87PgBY2eq8Vdkxq3NTpsDnPpd2vRzmgTyz\nqtPh1gqSTgCaI2KRpMIWTo0t/Gyzmpqa3n1cKBQoFLb08lbNfvpTuOgimD4dDjoo72rM6kexWKRY\nLJbltRSx5ZyWdBlwOrAe2A7YCfg5cDBQiIhmSXsA8yLiAEnjgIiIidnzZwATIuLhNq8bHf1uqw03\n3gjf/GZqSfihD+VdjVl9k0REdOm+aIdDOhFxSUS8LyL2AUYDcyPiDOCXwJjstLOAKdnjqcBoSX0k\nDQb2AxZ2pTirflddlVoSFosOe7Nq153dMr8DTJY0FlhBmplDRCyRNJk0o2cdcJ4v5etPRFpIdfvt\nqUvVXnvlXZGZdaTDIZ2K/WIP6dSsiLSQas6ctJd9//55V2TWOLozpOP98K1TNmyAL30JHn8c5s2D\n3XbLuyIzK5UD30q2bh2MGQPPPZfm2++0U94VmVlnOPCtJH/9K4wenUL/vvtgu+3yrsjMOsubp1mH\n3ngDTjwR+vRJi6oc9ma1yYFvW/Tqq2nV7F57pRk5ffrkXZGZdZUD39r14otw9NFp5ewPf+guVWa1\nzoFvm/Xcc2kv+xEj4JproJc/KWY1z/8b29/585/hk5+EM86Ab3/bXarM6oUD3/7GE0+kloQXXgjj\nx+ddjZmVk6dl2rsWLUpDOJdfnubbm1l9ceAbAA89BCNHwnXXwckn512NmVWCA9+YOzctqvrxj+H4\n4/OuxswqxYHf4O69Fz7/eZg8Gdx/xqy++aZtA5s8GcaOhV/+0mFv1ggc+A3q5pvhggvSJmiHHpp3\nNWbWEzyk04CuvTZ1qioW4QMfyLsaM+spDvwGEgGXXZZuzi5YAIMG5V2RmfUkB36DiEgLqaZNS2G/\n5555V2RmPc2B3wA2boR/+RdYuBDmz4f3vCfviswsDx3etJW0jaSHJT0m6Q+SLsuO95U0S9KTkmZK\n2qXVc8ZLWiZpqaRhlfwPsC1bvz5Nu1y8GO6/32Fv1shKamIuafuIeFNSb+AB4P8BJwEvR8QVki4G\n+kbEOElDgNuAjwMDgTnA+9t2LHcT88p7+2347Gdh7drUuGT77fOuyMy6qztNzEualhkRb2YPt8me\n8wowEpiUHZ8EjMoenwTcERHrI2I5sAw4pCvFWde9+SaMGpXG7qdOddibWYmBL6mXpMeA1UAxIpYA\n/SOiGSAiVgP9stMHACtbPX1Vdsx6yOuvp03Qdt89La7aZpu8KzKzalDSTduI2Ah8VNLOwExJBaDt\neEynx2eamprefVwoFCh4uWe3vfxyCvuDDkoboblxiVltKxaLFIvFsrxWSWP4f/ME6RvAW8DZQCEi\nmiXtAcyLiAMkjQMiIiZm588AJkTEw21ex2P4ZbZ6NQwdmgJ/4kQ3LjGrRxUdw5f03k0zcCRtBwwF\nHgOmAmOy084CpmSPpwKjJfWRNBjYD1jYleKsdCtWpC5Vp53msDezzStlSGdPYJIkkf5A3BIR92dj\n+pMljQVWAKcCRMQSSZOBJcA64DxfylfWsmVw7LGpS9UFF+RdjZlVq04P6ZTtF3tIpywWL4bhw+HS\nS+Gcc/KuxswqrTtDOl5pW8MWLoQTT4RrrkkNTMzMtsSBX6Pmz4dTToGbbkqhb2bWEQd+DZoxA844\nA+64A445Ju9qzKxWeJZ2jbn7bjjrLJgyxWFvZp3jwK8hP/kJnH9+usI//PC8qzGzWuMhnRpx/fVw\n+eUwdy4ccEDe1ZhZLXLg14ArroD//u90o3afffKuxsxqlQO/ikXAN76Rxu1/9SsY4C3ozKwbHPhV\nauPGtHJ2wYL0tfvueVdkZrXOgV+FNmyAL34Rli6FefNg113zrsjM6oEDv8q8806aY//yyzBrFuy4\nY94VmVm9cOBXkbfeSqtne/WCadNg223zrsjM6onn4VeJtWvhhBNgp53STVqHvZmVmwO/CrzySmpc\nsu++cOutsPXWeVdkZvXIgZ+zF16AT30KPvEJuPFG6N0774rMrF458HP07LNw5JEwciRcdZW7VJlZ\nZTnwc/L006kl4TnnpOYlDnszqzTP0snBkiUwbFhaRXvuuXlXY2aNwoHfw377Wzj+ePjud+H00/Ou\nxswaSYdDOpIGSpor6Q+SFkv6Sna8r6RZkp6UNFPSLq2eM17SMklLJQ2r5H9ALXnggdR/9oYbHPZm\n1vM6bGIuaQ9gj4hYJGlH4FFgJPB54OWIuELSxUDfiBgnaQhwG/BxYCAwB3h/247ljdbEfPZs+Oxn\n07TL447Luxozq1XdaWLe4RV+RKyOiEXZ47XAUlKQjwQmZadNAkZlj08C7oiI9RGxHFgGHNKV4urF\nlCnwuc/BPfc47M0sP52apSNpb+AjwENA/4hohvRHAeiXnTYAWNnqaauyYw3p9tvTjdn77kuzcszM\n8lLyTdtsOOcu4KsRsVZS2/GYTo/PNDU1vfu4UChQKBQ6+xJV7Qc/gKYmmDMHDjww72rMrBYVi0WK\nxWJZXqvDMXwASVsB04DpEXFNdmwpUIiI5mycf15EHCBpHBARMTE7bwYwISIebvOadT2Gf/XVcO21\nKez32y/vasysXlR0DD9zM7BkU9hnpgJjssdnAVNaHR8tqY+kwcB+wMKuFFeLItJCqv/5n9SlymFv\nZtWilFk6RwALgMWkYZsALiGF+GRgL2AFcGpEvJo9ZzxwNrCONAQ0azOvW3dX+BHwta+lfexnz4b+\n/fOuyMzqTXeu8Esa0qmEegv8DRvgvPNg0SKYPh122y3visysHnUn8L3StgzWrYMxY+C559KY/U47\n5V2Rmdnfc+B309tvw2mnpdaE990H222Xd0VmZpvn3TK74Y034MQTU8OSX/zCYW9m1c2B30WvvZZW\nzQ4YkBZX9emTd0VmZlvmwO+Cl16Co4+Gj34UbroJtvLAmJnVAAd+Jz33HBx1VLq6v/Za6OV30Mxq\nhOOqE5YvTy0JTz8dLrvMXarMrLY48Ev0xBMp7C+4AMaPz7saM7PO8+hzCX73OxgxIl3VjxmTdzVm\nZl3jwO/AQw/ByJFw3XVw8sl5V2Nm1nUO/C2YOzctqpo0KfWhNTOrZQ78dtx7bxq+ufNOqLNt+s2s\nQfmm7WZMngxjx8K0aQ57M6sfDvw2fvSjNBNn9mw49NC8qzEzKx8P6bTy/e/DlVfCvHmw//55V2Nm\nVl4O/Mxll8HNN8OCBbD33nlXY2ZWfg0f+BFwySXwy1+mloR77pl3RWZmldHQgb9xI3zlK2mufbEI\n731v3hWZmVVOwwb++vVwzjnw9NNw//2wyy55V2RmVlkdztKRdJOkZkmPtzrWV9IsSU9Kmilpl1Y/\nGy9pmaSlkoZVqvDueOcdGD0ann8eZsxw2JtZYyhlWuaPgOPaHBsHzImI/YG5wHgASUOAU4EDgBHA\n9VJ17Sn55ptpq4SNG2HqVNhhh7wrMjPrGR0GfkT8GnilzeGRwKTs8SRgVPb4JOCOiFgfEcuBZcAh\n5Sm1+15/PW2C9t73psVV22yTd0VmZj2nqwuv+kVEM0BErAb6ZccHACtbnbcqO5a7NWvg2GNhyJC0\nN467VJlZoylX7EVXntTU1PTu40KhQKFC+xisXg1Dh8Lw4XDFFW5cYma1o1gsUiwWy/Jaiug4qyUN\nAn4ZER/Ovl8KFCKiWdIewLyIOEDSOCAiYmJ23gxgQkQ8vJnXjFJ+d3c980y6sj/jDPj61x32Zlbb\nJBERXUqyUod0lH1tMhUYkz0+C5jS6vhoSX0kDQb2AxZ2pbByWLYsdak67zz4xjcc9mbW2Doc0pH0\nU6AAvEfSM8AE4DvAnZLGAitIM3OIiCWSJgNLgHXAeT1yGb8ZixenIZxLL03z7c3MGl1JQzoV+cUV\nHNJ55BE48UT43vfSfHszs3rRnSGdupursmBBakV4000p9M3MLKmrwJ8xI92cveMOOOaYvKsxM6su\nddMA5e674cwzYcoUh72Z2ebUReDfcgucf366wj/88LyrMTOrTjU/pHPDDal5yf33p1W0Zma2eTUd\n+FdemQJ//nzYZ5+8qzEzq241GfgR8B//AXfdlbpUDaiK3XrMzKpbzQV+BFx4Ybqqnz8f+vXr+Dlm\nZlZjgb9hA5x7LixZAvPmwa675l2RmVntqJnAX7cuzbF/8UWYNQt23DHviszMaktNBP5f/wqnnJI2\nP7v3Xth227wrMjOrPVU/D3/tWjjhhNSK8O67HfZmZl1V1YH/yiupccngwXDbbbD11nlXZGZWu6o2\n8F94AY4+Gg47DH7wA+jdO++KzMxqW1UG/rPPwlFHpd0ur77ajUvMzMqh6gL/T39KXarGjoVvftNh\nb2ZWLlUV+EuWpCv7f/s3+NrX8q7GzKy+VM20zN/+Ns3GufJKOP30vKsxM6s/FbvClzRc0hOSnpJ0\n8ZbOfeCB1H/2+usd9mZmlVKRwJfUC/gv4DjgQ8A/S/rg5s6dMwdGjUp72n/mM5WopjEUi8W8S6gr\nfj/Lx+9l9ajUFf4hwLKIWBER64A7gJFtT5oyBT77WbjnHjjuuApV0iD8P1V5+f0sH7+X1aNSgT8A\nWNnq+2ezY3/j3HPhvvvgk5+sUBVmZvauXG/azpkDBx6YZwVmZo1DEVH+F5UOA5oiYnj2/TggImJi\nq3PK/4vNzBpARHRphVKlAr838CRwDPA8sBD454hYWvZfZmZmJanIkE5EbJB0PjCLdJ/gJoe9mVm+\nKnKFb2Zm1afiWyuUsgBL0rWSlklaJOkjla6plnX0fko6StKrkn6bfX09jzprgaSbJDVLenwL5/iz\nWaKO3k9/NksnaaCkuZL+IGmxpK+0c17nPp8RUbEv0h+UPwKDgK2BRcAH25wzArg3e3wo8FAla6rl\nrxLfz6OAqXnXWgtfwD8CHwEeb+fn/myW9/30Z7P093IP4CPZ4x1J90S7nZ2VvsIvZQHWSOAnABHx\nMLCLpP4VrqtWlbSgDfAeoyWIiF8Dr2zhFH82O6GE9xP82SxJRKyOiEXZ47XAUv5+LVOnP5+VDvxS\nFmC1PWfVZs6xpKQFbcAnsn/i3StpSM+UVpf82Sw/fzY7SdLepH85PdzmR53+fFbNbplWNo8C74uI\nNyWNAH4BfCDnmszAn81Ok7QjcBfw1exKv1sqfYW/Cnhfq+8HZsfanrNXB+dY0uH7GRFrI+LN7PF0\nYGtJu/VciXXFn80y8mezcyRtRQr7WyJiymZO6fTns9KB/wiwn6RBkvoAo4Gpbc6ZCpwJ767QfTUi\nmitcV63q8P1sPYYn6RDS1Ns1PVtmTRHtjyv7s9l57b6f/mx22s3Akoi4pp2fd/rzWdEhnWhnAZak\nc9OP48aIuE/S8ZL+CLwBfL6SNdWyUt5P4GRJXwLWAW8Bp+VXcXWT9FOgALxH0jPABKAP/mx2SUfv\nJ/5slkzSEcDngMWSHgMCuIQ0Q6/Ln08vvDIzaxBV1dPWzMwqx4FvZtYgHPhmZg3CgW9m1iAc+GZm\nDcKBb2bWIBz4ZmYNwoFvZtYgHPjWkCRtL2mapMckPS7pFEkfk1SU9Iik6ZL6S+otaaGkI7PnXS7p\nW3nXb9YV3i3TGtVwYFVEfBpA0s7AdOCkiHhZ0qnAZRFxtqQxwJ1Z16FhpGYTZjXHgW+NajHwXUmX\nA/eSGnccCMyWJNK/fp8HiIglkm4FpgGHRsT6nGo26xYHvjWkiFgm6WPA8cC3gHnA7yPiiHae8n9J\nfxTc8cpqlsfwrSFJ2hN4KyJ+CnyXNEyze7bNLJK22tSRSdI/AX2BI4H/yoZ/zGqOd8u0hiRpGHAl\nsBF4B/gSsB74PrAL0Bv4Hqkr0wPA0RHxXLY99UER4a2SreY48M3MGoSHdMzMGoQD38ysQTjwzcwa\nhAPfzKxBOPDNzBqEA9/MrEE48M3MGoQD38ysQfx/9NnS5GwwUOkAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x108c3a610>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -251,8 +202,8 @@
     "    res[user.get('university_name', \"\")].append(user)\n",
     "    \n",
     "df = pd.DataFrame(users)\n",
-    "df = df.groupby('university_name').size()\n",
-    "df"
+    "df = df.groupby('sex').size()\n",
+    "df.plot()"
    ]
   },
   {
