--- a/PoliceGroups.ipynb
+++ b/PoliceGroups.ipynb
@@ -24,27 +24,17 @@
     "\n",
     "import time\n",
     "import json\n",
-    "import operator"
+    "import operator\n",
+    "import urllib2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3627a82367dcac645eab25dd2db10a572b5495ce7ce39988dbfe40f3a60499bba93c825971582d9a508b9'"
-      ]
-     },
-     "execution_count": 285,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = open('datasets/token', 'r')\n",
     "accessToken = file.read()"
