missed colleagues import

--- a/Parse_collegues.ipynb
+++ b/Parse_collegues.ipynb
@@ -9,63 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "var kernel = IPython.notebook.kernel;\n",
-       "var command = \"currentUrl = \" + \"'\" + window.location + \"'\";\n",
-       "kernel.execute(command);"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%javascript\n",
-    "var kernel = IPython.notebook.kernel;\n",
-    "var command = \"currentUrl = \" + \"'\" + window.location + \"'\";\n",
-    "kernel.execute(command);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from urlparse import urlparse\n",
-    "\n",
-    "r = urlparse(currentUrl)\n",
-    "code = r.query[5:]\n",
-    "\n",
-    "url = (\"https://oauth.vk.com/access_token\"\n",
-    "       \"?client_id=5429181\" \n",
-    "       \"&client_secret=uAZqxwa2hgjLa4KLvbTG\"\n",
-    "       \"&code=\" + code +\n",
-    "       \"&redirect_uri=\"  + r.scheme + \"://\" + r.netloc + r.path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -74,8 +18,8 @@
     "import json\n",
     "import urllib2   \n",
     "\n",
-    "data = json.load(urllib2.urlopen(url))\n",
-    "accessToken = data['access_token']"
+    "file = open('datasets/token', 'r')\n",
+    "accessToken = file.read()"
    ]
   },
   {
@@ -89,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
